--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -3,7 +3,7 @@
 #new-user
   = semantic_form_for @user, :url => account_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
     %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? @redirectUrl : '/app/user/complete') }
-    = form.hidden_field :cloud_access_choice, :value => (@product == CloudAccess::FLEX_NAME ? CloudAccess::FLEX : CloudAccess::EXPRESS)
+    = form.hidden_field :cloud_access_choice, :value => CloudAccess::EXPRESS
     = form.semantic_errors :captcha
     = form.inputs do
       = form.input :email_address, :input_html => { :type => 'email', :class => 'input-xlarge', :placeholder => 'Enter a valid email address', :autofocus => true }
