--- a/site/app/views/legal/opensource_disclaimer.html.haml
+++ b/site/app/views/legal/opensource_disclaimer.html.haml
@@ -62,9 +62,6 @@
         = link_to "libcurl", "http://curl.haxx.se/"
         (MIT)
       %li
-        = link_to "libcurl-devel", "http://curl.haxx.se/"
-        (MIT)
-      %li
         = link_to "libjpeg-turbo", "http://sourceforge.net/projects/libjpeg-turbo"
         (wxWidgets)
       %li
@@ -77,16 +74,10 @@
         = link_to "libxml2", "http://xmlsoft.org/"
         (MIT)
       %li
-        = link_to "libxml2-devel", "http://xmlsoft.org/"
-        (MIT)
-      %li
         = link_to "libxslt", "http://xmlsoft.org/XSLT/"
         (MIT)
       %li
-        = link_to "libxslt-devel", "http://xmlsoft.org/XSLT/"
-        (MIT)
-      %li
-        = link_to "maven3", "http://maven.apache.org/"
+        = link_to "maven", "http://maven.apache.org/"
         (ASL 2.0 and MIT and BSD)
       %li
         = link_to "memcached", "http://www.memcached.org/"
@@ -107,16 +98,7 @@
         = link_to "mongodb", "http://www.mongodb.org"
         (AGPLv3 and zlib and ASL 2.0)
       %li
-        = link_to "mongodb-devel", "http://www.mongodb.org"
-        (AGPLv3 and zlib and ASL 2.0)
-      %li
-        = link_to "mongodb-server", "http://www.mongodb.org"
-        (AGPLv3 and zlib and ASL 2.0)
-      %li
-        = link_to "mysql-devel", "http://www.mysql.com"
-        (GPLv2 with exceptions)
-      %li
-        = link_to "mysql-server", "http://www.mysql.com"
+        = link_to "mysql", "http://www.mysql.com"
         (GPLv2 with exceptions)
       %li
         = link_to "nodejs", "#needs_to_be_filled_in"
@@ -168,24 +150,6 @@
         = link_to "php", "http://www.php.net/"
         (PHP)
       %li
-        = link_to "php-devel", "http://www.php.net/"
-        (PHP)
-      %li
-        = link_to "php-gd", "http://www.php.net/"
-        (PHP)
-      %li
-        = link_to "php-imap", "http://www.php.net/"
-        (PHP)
-      %li
-        = link_to "php-mbstring", "http://www.php.net/"
-        (PHP)
-      %li
-        = link_to "php-mysql", "http://www.php.net/"
-        (PHP)
-      %li
-        = link_to "php-pdo", "http://www.php.net/"
-        (PHP)
-      %li
         = link_to "php-pear", "http://pear.php.net/package/PEAR"
         (BSD and PHP and LGPLv2+)
       %li
@@ -201,12 +165,6 @@
         = link_to "php-pecl-mongo", "http://pecl.php.net/package/mongo"
         (ASL 2.0)
       %li
-        = link_to "php-pgsql", "http://www.php.net/"
-        (PHP)
-      %li
-        = link_to "php-xml", "http://www.php.net/"
-        (PHP)
-      %li
         = link_to "phpMyAdmin", "http://www.phpmyadmin.net/"
         (GPLv2+)
       %li
@@ -216,34 +174,13 @@
         = link_to "postgresql", "http://www.postgresql.org/"
         (PostgreSQL)
       %li
-        = link_to "postgresql-devel", "http://www.postgresql.org/"
-        (PostgreSQL)
-      %li
         = link_to "postgresql-ip4r", "http://pgfoundry.org/projects/ip4r"
         (BSD)
       %li
         = link_to "postgresql-jdbc", "http://jdbc.postgresql.org/"
         (BSD and ASL 2.0)
       %li
-        = link_to "postgresql-libs", "http://www.postgresql.org/"
-        (PostgreSQL)
-      %li
-        = link_to "postgresql-plperl", "http://www.postgresql.org/"
-        (PostgreSQL)
-      %li
-        = link_to "postgresql-plpython", "http://www.postgresql.org/"
-        (PostgreSQL)
-      %li
-        = link_to "postgresql-pltcl", "http://www.postgresql.org/"
-        (PostgreSQL)
-      %li
-        = link_to "postgresql-server", "http://www.postgresql.org/"
-        (PostgreSQL)
-      %li
         = link_to "pymongo", "http://api.mongodb.org/python"
-        (ASL 2.0 and MIT)
-      %li
-        = link_to "pymongo-gridfs", "http://api.mongodb.org/python"
         (ASL 2.0 and MIT)
       %li
         = link_to "python", "http://www.python.org/"
@@ -270,17 +207,12 @@
         = link_to "ruby-RMagick", "http://rmagick.rubyforge.org/"
         (MIT)
       %li
-        = link_to "ruby-devel", "http://ruby-lang.org/"
-        (Ruby or BSD)
-      %li
         = link_to "ruby-mysql", "http://www.tmtm.org/en/mysql/ruby/"
         (Ruby)
       %li
         = link_to "ruby-nokogiri", "#needs_to_be_filled_in"
       %li
         = link_to "ruby-postgres", "#needs_to_be_filled_in"
-      %li
-        = link_to "ruby-sqlite3", "#needs_to_be_filled_in"
       %li
         = link_to "rubygem-activemodel", "#needs_to_be_filled_in"
       %li
@@ -339,9 +271,6 @@
       %li
         = link_to "selinux-policy-targeted", "http://oss.tresys.com/repos/refpolicy/"
         (GPLv2+)
-      %li
-        = link_to "sqlite-devel", "http://www.sqlite.org/"
-        (Public Domain)
       %li
         = link_to "uuid-pgsql", "http://www.ossp.org/pkg/lib/uuid/"
         (MIT)
