OS disclaimer - fix up licenses and links; remove redundant listings
* redudent listings include modules that are part of the stickshift
  project as only 3rd party modules need to be listed here

--- a/site/app/views/legal/opensource_disclaimer.html.haml
+++ b/site/app/views/legal/opensource_disclaimer.html.haml
@@ -87,7 +87,7 @@
         (ASL 2.0)
       %li
         = link_to "mod_passenger", "http://www.modrails.com/"
-        = link_to "(Phusion)", "https://github.com/FooBarWidget/passenger/blob/master/LICENSE"
+        (MIT)
       %li
         = link_to "mod_perl", "http://perl.apache.org/"
         (ASL 2.0)
@@ -101,21 +101,29 @@
         = link_to "mysql", "http://www.mysql.com"
         (GPLv2 with exceptions)
       %li
-        = link_to "nodejs", "#needs_to_be_filled_in"
+        = link_to "nodejs", "http://nodejs.org"
+        (MIT)
       %li
-        = link_to "nodejs-async", "#needs_to_be_filled_in"
+        = link_to "nodejs-async", "http://github.com/caolan/async"
+        (MIT)
       %li
-        = link_to "nodejs-connect", "#needs_to_be_filled_in"
+        = link_to "nodejs-connect", "http://github.com/senchalabs/connect"
+        (MIT)
       %li
-        = link_to "nodejs-express", "#needs_to_be_filled_in"
+        = link_to "nodejs-express", "http://github.com/visionmedia/express"
+        (MIT)
       %li
-        = link_to "nodejs-mongodb", "#needs_to_be_filled_in"
+        = link_to "nodejs-mongodb", "http://github.com/christkv/node-mongodb-native"
+        (ASL 2.0)
       %li
-        = link_to "nodejs-mysql", "#needs_to_be_filled_in"
+        = link_to "nodejs-mysql", "http://github.com/felixge/node-mysql"
+        (MIT)
       %li
-        = link_to "nodejs-node-static", "#needs_to_be_filled_in"
+        = link_to "nodejs-node-static", "http://github.com/cloudhead/node-static"
+        (MIT)
       %li
-        = link_to "nodejs-pg", "#needs_to_be_filled_in"
+        = link_to "nodejs-pg", "http://github.com/brianc/node-postgres"
+        (MIT)
       %li
         = link_to "perl-App-cpanminus", "http://search.cpan.org/dist/App-cpanminus/"
         (GPL+ or Artistic)
@@ -210,33 +218,38 @@
         = link_to "ruby-mysql", "http://www.tmtm.org/en/mysql/ruby/"
         (Ruby)
       %li
-        = link_to "ruby-nokogiri", "#needs_to_be_filled_in"
+        = link_to "ruby-nokogiri", "http://nokogiri.rubyforge.org/nokogiri/"
+        (MIT)
       %li
-        = link_to "ruby-postgres", "#needs_to_be_filled_in"
+        = link_to "ruby-postgres", "http://bitbucket.org/ged/ruby-pg/"
+        (Ruby)
       %li
-        = link_to "rubygem-activemodel", "#needs_to_be_filled_in"
+        = link_to "rubygem-activemodel", "http://www.rubyonrails.org"
+        (MIT)
       %li
-        = link_to "rubygem-cloud-sdk-common", "#needs_to_be_filled_in"
+        = link_to "rubygem-dnsruby", "http://rubyforge.org/projects/dnsruby/"
+        (ASL 2.0)
       %li
-        = link_to "rubygem-cloud-sdk-controller", "#needs_to_be_filled_in"
+        = link_to "rubygem-highline", "http://highline.rubyforge.org"
+        (GPLv2+ or Ruby)
       %li
-        = link_to "rubygem-cloud-sdk-node", "#needs_to_be_filled_in"
+        = link_to "rubygem-json_pure", "http://mocha.rubyforge.org"
+        (GPLv2 or Ruby)
       %li
-        = link_to "rubygem-dnsruby", "#needs_to_be_filled_in"
+        = link_to "rubygem-mocha", "http://mocha.rubyforge.org"
+        (MIT and Ruby)
       %li
-        = link_to "rubygem-highline", "#needs_to_be_filled_in"
+        = link_to "rubygem-mongo", "http://www.mongodb.org"
+        (ASL 2.0)
       %li
-        = link_to "rubygem-json_pure", "#needs_to_be_filled_in"
+        = link_to "rubygem-open4", "http://github.com/ahoward/open4/tree/master"
+        (BSD or Ruby)
       %li
-        = link_to "rubygem-mocha", "#needs_to_be_filled_in"
+        = link_to "rubygem-parseconfig", "http://www.5dollarwhitebox.org"
+        (MIT)
       %li
-        = link_to "rubygem-mongo", "#needs_to_be_filled_in"
-      %li
-        = link_to "rubygem-open4", "#needs_to_be_filled_in"
-      %li
-        = link_to "rubygem-parseconfig", "#needs_to_be_filled_in"
-      %li
-        = link_to "rubygem-state_machine", "#needs_to_be_filled_in"
+        = link_to "rubygem-state_machine", "http://www.pluginaweek.org"
+        (MIT)
       %li
         = link_to "rubygem-builder", "http://onestepback.org"
         (MIT)
@@ -252,8 +265,6 @@
       %li
         = link_to "rubygem-json_pure", "http://flori.github.com/json"
         (GPLv2 or Ruby)
-      %li
-        = link_to "rubygem-mongo", "#needs_to_be_filled_in"
       %li
         = link_to "rubygem-parseconfig", "http://www.5dollarwhitebox.org"
         (MIT)
