Add default barista config to autogenerate in development mode, and make production mode route directly Delete old JS files Delete previously generated JS files Fixup all stylesheet and javascript urls to be relative

--- a/site/app/views/control_panel/index.html.haml
+++ b/site/app/views/control_panel/index.html.haml
@@ -1,9 +1,9 @@
 -# file: Control Panel index
 
 - content_for :javascripts do
-  = javascript_include_tag '/app/javascripts/jquery.ui.widget.js'
-  = javascript_include_tag '/app/javascripts/widgets.js'
-  = javascript_include_tag '/app/javascripts/control_panel.js'
+  = javascript_include_tag 'jquery.ui.widget.js'
+  = javascript_include_tag 'widgets.js'
+  = javascript_include_tag 'control_panel.js'
 
 
 %section.main
