--- a/site/app/views/home/index.html.haml
+++ b/site/app/views/home/index.html.haml
@@ -11,8 +11,8 @@
         the stack so you can focus on your code.
 
 - content_for :javascripts do
-  = javascript_include_tag "/app/javascripts/twitter.branding.js"
-  = javascript_include_tag "/app/javascripts/home.branding.js"
+  = javascript_include_tag "twitter.branding.js"
+  = javascript_include_tag "home.branding.js"
 
 - content_for :sub_layout do
 
