--- a/site/app/views/layouts/site/_javascripts.html.haml
+++ b/site/app/views/layouts/site/_javascripts.html.haml
@@ -19,7 +19,7 @@
   = javascript_include_tag script
 
 - local_scripts.each do |script|
-  = javascript_include_tag "/app/javascripts/#{script}"
+  = javascript_include_tag script
 
 -#  Append your own using content_for :javascripts
 = yield :javascripts
