--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -1,6 +1,6 @@
 - content_for :stylesheets do
-  = stylesheet_link_tag '/app/stylesheets/site.css', :media => 'all'
-  -#= stylesheet_link_tag '/app/stylesheets/home.css', :media => 'all'
+  = stylesheet_link_tag 'site.css', :media => 'all'
+  -#= stylesheet_link_tag 'home.css', :media => 'all'
 
 %header
   %div{:style=>'display:none'}
