--- a/site/app/views/layouts/site.html.haml
+++ b/site/app/views/layouts/site.html.haml
@@ -1,5 +1,5 @@
 - content_for :javascripts do
-  = javascript_include_tag '/app/javascripts/script.js'
+  = javascript_include_tag 'script.js'
 
 !!! 5
 -# http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither
