--- a/site/app/views/styleguide/signup.html.haml
+++ b/site/app/views/styleguide/signup.html.haml
@@ -1,5 +1,5 @@
 - content_for :stylesheets do
-  = stylesheet_link_tag '/app/stylesheets/site.css', :media => 'all'
+  = stylesheet_link_tag 'site.css', :media => 'all'
 
 %header
   #nav
