Removed/changed references to express in current console

--- a/site/app/views/console/help.html.haml
+++ b/site/app/views/console/help.html.haml
@@ -39,7 +39,7 @@
     %p
       %strong Just starting with OpenShift?
     %p Get your first application up off the ground through the application creation wizard.  #{link_to 'Create an app now', application_types_path, :class => 'btn btn-success'}
-    %p If you prefer the command line, #{link_to 'our Quickstart page', quickstart_path} will help you install the client tools, create your application, and make your first change.
+    %p If you prefer the command line, #{link_to 'our Getting Started page', getting_started_path} will help you install the client tools, create your application, and make your first change.
     %p 
       Our #{link_to 'GitHub page', openshift_github_url} has tutorials for creating apps based many different technologies like 
       #{link_to 'Drupal', openshift_github_project_url('drupal-example')},
