Removed the last references to Flex from site codebase

--- a/site/app/views/getting_started/generic/show.html.haml
+++ b/site/app/views/getting_started/generic/show.html.haml
@@ -14,12 +14,10 @@
       Now that you have registered, the next step is to check out our Platform as a Service offerings.  No matter where you are in your development lifecycle, we have a solution to cater to you.
 
     %p
-      Check out the following offerings and just click 'Try it Now' if you want to start using one - for free!
+      Check out the Getting Started Guide and start trying OpenShift - for free!
 
       %ul
         %li
-          = link_to 'Express >', '/app/express', :class => 'more'
-        %li
-          = link_to 'Flex >', '/app/flex', :class => 'more'
+          = link_to 'Getting Started >', '/app/getting_started', :class => 'more'
 
   .clear
