Getting started headlines

--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -3,10 +3,11 @@
   .messaging.messaging-home
     .container
       .primary.headline
-        Our
-        %strong#technology-rotate shared
-        cloud solution
-      .secondary OpenShift is a free, cloud-based application platform for Java, Ruby, Node.js, Python, PHP and Perl applications. 
+        Shift your 
+        %strong App
+        to the Cloud
+      .secondary 
+        Start your journey into the cloud with the answers you need.
 
   - if logged_in?
     = take_action console_path, 'Open the <strong>OpenShift</strong> Console'
