--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -96,8 +96,10 @@
 
     OpenShift is built on a foundation of Red Hat Enterprise Linux (RHEL).  Beyond being the leading and most respected Linux distro, RHEL provides some key capabilities that allow OpenShift to be stable, responsive, performant and secure. OpenShift leverages the multitenancy and security models within RHEL to provide fine-grained and trusted control over the compute and storage resources available to any single OpenShift application.  SELinux allows OpenShift to "firewall" one user's application from another in order to insure security and survivability.  Taking a "multi-tenant in the OS" approach vs. a "multi-tenant hypervisor" approach allows OpenShift to scale resources much more quickly so that your application will never lack the horsepower that it needs.
 
-    Add on top of RHEL, a full selection of open source Languages, Frameworks, and Middleware combined with a "Cartridge" approach that allows users to very easily select the components that their applications need whether it is a NoSQL datastore or a Business Intelligence analytics engine.  For full details on the OpenShift technical architecture see this link <Arch Overview on Community if it is going to be there>.
-
+    Add on top of RHEL, a full selection of open source Languages, Frameworks, and Middleware combined with a "Cartridge" approach that allows users to very easily select the components that their applications need whether it is a NoSQL datastore or a Business Intelligence analytics engine.  
+    
+  -# FIXME link to infrastructure For full details on the OpenShift technical architecture see this link <Arch Overview on Community if it is going to be there>.
+  :markdown
     ## Easy-peasy
 
     The design and componentry of OpenShift really result in one thing for Developers:  Ease of Use without Worries.  OpenShift's mission is to make your job easier by taking care of all the messy IT aspects of app development and allowing you to focus on your job: Coding your Application and servicing your customers.
