Fix Overpass font to use correct Bold style, add OverpassNormal for old behavior Revert brand logo to use text, temporary fixes for narrow screens Update layout to use counter standard 'lift-counter' Add page titles to most pages, fixup markup to be consistent Remove .ribbon-content everywhere.

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -23,6 +23,8 @@
     line-height: 1em;
     float: left;
     padding: 4px 0;
+    text-transform: uppercase;
+    font-family: $headerFontFamily;
   }
   a {
   	color: #fff;
