--- a/site/app/views/home/index.html.haml
+++ b/site/app/views/home/index.html.haml
@@ -46,8 +46,8 @@
                 %p Keep up to date with the latest news and announcements from the OpenShift team. Our team is constantly bringing you the latest advice and tutorials.
             %li
               = link_to console_path, :class => 'link-tile' do
-                %h4 Try out the new console preview
-                %p We're rapidly improving the new management console to make OpenShift as easy to build your apps on as possible.  The old control panel is still available.
+                %h4 Try out the new console
+                %p The new console is out of preview and ready to help you build your apps in the cloud. We'll be adding lots more features to the console, so check back frequently!
             %li
               = link_to events_url, :class => 'link-tile' do
                 %h4 Meet the OpenShift team
