--- a/site/app/views/layouts/site/_footer.html.haml
+++ b/site/app/views/layouts/site/_footer.html.haml
@@ -32,7 +32,7 @@
           %h3 Help
         %ul.unstyled
           %li= link_to 'FAQ', faq_url
-          %li= link_to 'Contact', 'mailto:openshift@redhat.com'
+          %li= link_to 'Contact', mailto_openshift_url
 
 %section#copyright
   .container
