--- a/site/app/views/legal/acceptable_use.html.haml
+++ b/site/app/views/legal/acceptable_use.html.haml
@@ -1,13 +1,8 @@
--# file: Acceptable use policy
+- content_for :page_title, 'Acceptable Use Policy'
 
-- content_for :page_title do
-  Acceptable Use Policy
+%h1.ribbon Acceptable Use Policy
 
-%h1.ribbon
-  .ribbon-content Acceptable Use Policy
-  .ribbon-left
-
-.content
+%section.content
   %p.intro
     Red Hat is providing You with access to certain Red Hat Services (which may include software, networking, and other computing resources) (collectively, the “Red Hat Platform”) for Your lawful consumption and use in conformance with their intended use (as generally described on the relevant Red Hat website associated with the particular Red Hat Service).  In connection with the Red Hat Services, You and/or your users may provide or use “Content” (as defined in the Services Agreement) in connection with the Red Hat Platform.  Your use of the Red Hat Platform, including Content, is subject to the restrictions set forth in this Acceptable Use Policy, in addition to the terms of Your agreement with Red Hat (Your “Services Agreement”).  Red Hat may change or modify this Acceptable Use Policy at any time and for any reason by posting a new version of this Policy at <a href="http://openshift.redhat.com/app/legal/acceptable_use">http://openshift.redhat.com/app/legal/acceptable_use</a>.  You are responsible for monitoring this site and ensuring you are aware of the current terms.  If you violate this Acceptable Use Policy, we may suspend or terminate your access to the Red Hat Platform.  Set forth below are examples of prohibited conduct and Content in order to assist you in your use.  Please note, however, that this list below is not exhaustive and you should follow the overriding principles contained in each section below.
 
