--- a/site/app/views/legal/openshift_privacy.html.haml
+++ b/site/app/views/legal/openshift_privacy.html.haml
@@ -1,13 +1,8 @@
--# file: Privacy statement
+- content_for :page_title, 'OpenShift Privacy Statement'
 
-- content_for :page_title do
-  OpenShift Privacy Statement
+%h1.ribbon OpenShift Privacy Statement
 
-%h1.ribbon
-  .ribbon-content OpenShift Privacy Statement
-  .ribbon-left
-
-.content
+%section.content
   %p
     The Red Hat, Inc. Privacy Statement set forth at <a href="http://www.redhat.com/legal/privacy_statement.html">http://www.redhat.com/legal/privacy_statement.html</a> (the “Red Hat Policy”) describes how Red Hat treats personal information when you use our products and services, including information collected when you use OpenShift.  By using OpenShift, you are accepting the practices described in the Red Hat Policy, as well as the following privacy practices that are specific to OpenShift:
 
