--- a/site/app/views/legal/services_agreement.html.haml
+++ b/site/app/views/legal/services_agreement.html.haml
@@ -1,13 +1,8 @@
--# file: Services agreement
+- content_for :page_title, 'OpenShift Preview Services Agreement'
 
-- content_for :page_title do
-  OpenShift Preview Services Agreement
+%h1.ribbon OpenShift Preview Services Agreement
 
-%h1.ribbon
-  .ribbon-content OpenShift Preview Services Agreement
-  .ribbon-left
-
-.content
+%section.content
   %p.intro
     PLEASE READ THIS AGREEMENT CAREFULLY BEFORE USING RED HAT PREVIEW SERVICES OR PREVIEW SOFTWARE.  IN ORDER TO USE RED HAT PREVIEW SERVICES OR PREVIEW SOFTWARE, YOU MUST AGREE TO THE TERMS OF THIS AGREEMENT.  BY USING RED HAT PREVIEW SOFTWARE OR PREVIEW SERVICES, YOU AGREE THAT YOUR USE IS GOVERNED BY THIS AGREEMENT. IF YOU ARE AN INDIVIDUAL ACTING ON BEHALF OF AN ENTITY, YOU REPRESENT THAT YOU HAVE THE AUTHORITY TO ENTER INTO THIS AGREEMENT ON BEHALF OF THAT ENTITY.  IF YOU DO NOT ACCEPT THE TERMS OF THIS AGREEMENT, THEN YOU MUST NOT USE RED HAT PREVIEW SERVICES OR PREVIEW SOFTWARE.  YOU CONFIRM THAT YOU ARE AT LEAST 18 YEARS OLD.
 
