--- a/site/app/views/legal/show.html.haml
+++ b/site/app/views/legal/show.html.haml
@@ -1,13 +1,8 @@
--# file: Service terms
+- content_for :page_title, 'Terms and Conditions'
 
-- content_for :page_title do
-  Terms and Conditions
+%h1.ribbon Legal Terms Guide
 
-%h1.ribbon
-  .ribbon-content Legal Terms Guide
-  .ribbon-left
-
-.content
+%section.content
   %p
     This page provides a list of the legal terms that apply to your use of OpenShift.
 
