--- a/site/app/views/legal/site_terms.html.haml
+++ b/site/app/views/legal/site_terms.html.haml
@@ -1,13 +1,8 @@
--# file: Site terms
+- content_for :page_title, 'Terms of Use'
 
-- content_for :page_title do
-  Terms of Use
+%h1.ribbon Terms of Use
 
-%h1.ribbon
-  .ribbon-content Terms of Use
-  .ribbon-left
-
-.content
+%section.content
   %p
     Please read these Terms carefully before using this website. By using this website you have accepted these Terms of Use. If you do not accept these Terms of Use, do not use the website.
 
