--- a/site/app/views/product/express.html.haml
+++ b/site/app/views/product/express.html.haml
@@ -1,4 +1,4 @@
-- content_for :nav_class, ' lift-counter'
+- content_for :page_title, 'Express'
 - content_for :header do
   .messaging.messaging-home
     .container
