--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -1,4 +1,4 @@
-- content_for :nav_class, ' lift-counter'
+- content_for :page_title, 'Get Started'
 - content_for :header do
   .messaging.messaging-home
     .container
