--- a/site/app/views/terms/acceptance_terms.html.haml
+++ b/site/app/views/terms/acceptance_terms.html.haml
@@ -1,13 +1,8 @@
--# file: Site terms
+- content_for :page_title, "Website Terms"
 
-- content_for :page_title do
-  Website Terms
+%h1.ribbon Legal terms
 
-%h1.ribbon
-  .ribbon-content Legal terms
-  .ribbon-left
-  
-.content
+%section.content
   %p
     In order to access and use the OpenShift Preview Services and Software you will need to accept the terms and conditions of the OpenShift Services Agreement.  Also, since OpenShift is just one of several online properties of Red Hat, you will also need to agree to certain site terms that will apply to your use of other Red Hat sites.  As a result, by clicking "I Accept" you agree to comply with the following terms:
   #terms
