--- a/site/app/stylesheets/overpass.scss
+++ b/site/app/stylesheets/overpass.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'OverpassBold';
+  font-family: 'Overpass';
   src:url('fonts/overpass-bold-wf.eot');
   src:url('fonts/overpass-bold-wf.eot?#iefix') format('eot'),
       url('fonts/overpass-bold-wf.woff') format('woff'),
@@ -11,6 +11,20 @@
 
 @font-face {
   font-family: 'Overpass';
+  src:url('fonts/overpass-wf.eot');
+  src:url('fonts/overpass-wf.eot?#iefix') format('eot'),
+      url('fonts/overpass-wf.woff') format('woff'),
+      url('fonts/overpass-wf.ttf') format('truetype'),
+      url('fonts/overpass-wf.svg#webfontiqWxLEM5') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* OverpassNormal will be taller than surrounding text when 
+   bolded, so use Overpass when mixing bolded and normal text 
+   */
+@font-face {
+  font-family: 'OverpassNormal';
   src:url('fonts/overpass-wf.eot');
   src:url('fonts/overpass-wf.eot?#iefix') format('eot'),
       url('fonts/overpass-wf.woff') format('woff'),
