--- a/site/app/stylesheets/site/_navbar.scss
+++ b/site/app/stylesheets/site/_navbar.scss
@@ -12,14 +12,18 @@
     padding: 0;
     font-size: 17px;
     font-family: $headerFontFamily;
-    text-shadow: none;
+
+    word-wrap: normal;
+    text-transform: uppercase;
+    font-size: 19px;
+    letter-spacing: 1px;
   }
 
   .brand-image {
     background: url('../images/logo-medium.png') center top no-repeat transparent;
     height: $logoHeight;
-    width: $logoWidth;
-    margin-bottom: 13px;
+    //width: $logoWidth;
+    margin-bottom: 11px;
   }
   
   .brand > a {
@@ -40,14 +44,10 @@
     transform: rotate(-10deg);
   }
   .brand > a > .brand-text {
-  	background: url('../images/logo-text-medium.png') center top no-repeat transparent;
   	border-bottom: 2px solid transparent;
-    bottom: 0;
-    color: white;
-    height: 18px;
-    text-align: center;
-    width: 111px;
     padding-bottom: 2px;
+    color: white;
+    text-align: center;
   }
   .brand > a:hover > .brand-text {
   	border-bottom: 2px solid #EB0011;
@@ -68,6 +68,7 @@
         color: white; 
         text-transform: uppercase; 
         font-weight: bold;
+        font-family: OverpassNormal, $headerFontFamily;
         /* reset styles */
         padding: 15px 0;
         border-radius: 0;
@@ -110,7 +111,6 @@
     .brand {
       float: left;
       text-align: center;
-      width: $logoWidth;
     }
 
     .nav {
@@ -161,34 +161,20 @@
 	#learn .action-call {
     font-size: 11px;
   }
-  .navbar .brand-image {
-    background: transparent url("../images/OSlogo-mobile.png") left top no-repeat;
-    height: 63px;
-    width: 63px;
-    margin-bottom: 5px;
-  }
-  .navbar .brand > a:hover > .brand-image {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  .navbar .brand {
-  	font-size:12.5px;
-  	width: 63px;
-  	height: auto;
-  }
-  .navbar .brand > a > .brand-text {
-  	background-image: none;
-  	width: 63px;
-  	height:0;
-  	padding:0;
-  	}
-  .navbar .nav > li > a {
-  	font-weight:normal;
-  	word-wrap:normal;
-  }
   .navbar {
-    margin-bottom: 0;
+    .brand {
+      .brand-image {
+        margin-bottom: 5px;
+      }
+      > a:hover > .brand-image {
+        -moz-transform: rotate(0);
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+      }
+    }
+    .nav > li > a {
+      font-weight: normal;
+    }
   }
 }
 
