--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -1,5 +1,4 @@
-- content_for :page_title, 'What is OpenShift?'
-- content_for :nav_class, ' lift-counter'
+- content_for :page_title, 'Learn More'
 - content_for :header do
   .messaging
     .container
@@ -15,9 +14,7 @@
   - else
     = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
 
-%h1.ribbon
-  .ribbon-content What is OpenShift?
-  .ribbon-left
+%h1.ribbon What is OpenShift?
 
 %section
 
