--- a/site/app/views/styleguide/overview.html.haml
+++ b/site/app/views/styleguide/overview.html.haml
@@ -1,4 +1,4 @@
-- content_for :nav_class, ' lift-counter'
+- content_for :page_title, 'Learn More'
 - content_for :header do
   .messaging
     .container
@@ -9,8 +9,7 @@
 
   = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
 
-%h1.ribbon
-  What is OpenShift?
+%h1.ribbon What is OpenShift?
 
 %section
   :markdown
