fix OS disclaimer page merge issue

--- a/site/app/views/legal/opensource_disclaimer.html.haml
+++ b/site/app/views/legal/opensource_disclaimer.html.haml
@@ -1,11 +1,10 @@
--# file: Open Source Disclaimer
+- content_for :page_title, 'Open Source Disclaimer'
 
-- content_for :page_title do
-  Open Source Disclaimer
+%h1.ribbon Open Source Disclaimer
 
-%h1.ribbon
-  .ribbon-content Open Source Disclaimer
-  .ribbon-left
+%section.content
+  %p.intro
+    These are some of the projects that are used to create Red Hat's OpenShift Platform-as-a-Service (PaaS), but are not necessarily the versions of code currently used for OpenShift. Red Hat and OpenShift are trademarks of Red Hat, Inc., registered in the United States and other countries. Red Hat's offering of the code for your downloading, use, modification, or distribution is not a grant of a trademark license to OpenShift or any other Red Hat trademark.
 
   %ul
     %li
