Clean up markup on appcelerator page

--- a/site/app/views/getting_started_external/appcelerator.html.haml
+++ b/site/app/views/getting_started_external/appcelerator.html.haml
@@ -1,12 +1,8 @@
--# file: OpenShift registration complete
+- content_for :page_title, 'OpenShift Registration Complete!'
 
-- content_for :page_title do
-  OpenShift Registration Complete!
+%h1 What's Next?
 
-%section.main
-  %header
-    %h1 What's Next?
-    
-  .content
-    %p
-      Congratulations!  You have successfully registered for OpenShift.  You may now return to Titanium Studio to continue building your mobile cloud applications.
+%section
+  %p
+    Congratulations!  You have successfully registered for OpenShift.  You may 
+    now return to Titanium Studio to continue building your mobile cloud applications.
