--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -3,41 +3,44 @@
   .messaging.messaging-home
     .container
       .primary.headline
-        Shift your 
-        %strong App
-        to the Cloud
-      .secondary 
-        Start your journey into the cloud with the answers you need.
+        Launch your
+        %strong Big Idea
+        in minutes
+      .secondary
+        OpenShift is a next generation application hosting environment. Read on to see how easy it is to get started in the cloud.
 
-  - if logged_in?
+  - if previously_logged_in?
     = take_action console_path, 'Open the <strong>OpenShift</strong> Console'
   - else
     = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
 
 %h1.ribbon Get Started with OpenShift
 
-%section.row
-  .span6
-    %h3 From the browser
-    %p
-      OpenShift offers a brand new (and rapidly improving) web console for creating and managing 
-      your apps without ever going to the command line. The console will help you create your first
-      application and then show you what you need to do to add additional capabilities like MongoDB, 
-      MySQL, or Jenkins continuous integration builds.
-    %p= link_to "Open the console", console_path, :class => 'action-more'
+%section
+  %h2 From the browser
+  %p
+    OpenShift offers a brand new (and rapidly improving) web console for creating and managing 
+    your apps without ever going to the command line. The console will help you create your first
+    application and then show you what you need to do to add additional capabilities like MongoDB, 
+    MySQL, or Jenkins continuous integration builds.
 
-  .span6
-    %h3 From the command line
-    %p
-      If you'd like to use our powerful command line client, the steps below will get you installed 
-      and running in just minutes.
+  - if previously_logged_in?
+    %p= link_to "Open the console now", console_path, :class => 'action-more'
+  - else
+    %p= link_to "Sign up and use the console now", new_account_path, :class => 'action-more'
+
+%section
+  %h2 From the command line
+  %p
+    If you'd like to use our powerful command line client, the steps below will get you installed 
+    and running in just minutes.
 
 %section#install_client_tools
-  %h2 1. Install the client tools
+  %h3 1. Install the client tools
   .row
     .span6
       %section#rhel.install
-        %h3 Red Hat Enterprise Linux or Fedora
+        %h4 Red Hat Enterprise Linux or Fedora
         .hero-unit.prereqs
           %h5 Prerequisites
           %ul
@@ -63,7 +66,7 @@
               As an alternative to <code>sudo</code>, you can activate a root terminal with the <code>su</code> command and the root password. In that case, omit <code>sudo</code> from the given commands. Don't forget to close your root terminal when you're done!
 
       %section#other_nix.install
-        %h3 Other Linuxes
+        %h4 Other Linuxes
         .hero-unit.prereqs
           %h5 Prerequisites
           %ul
@@ -77,7 +80,7 @@
             %pre $ su -c 'gem install rhc' 
     .span6
       %section#mac.install
-        %h3 Mac
+        %h4 Mac
         .hero-unit.prereqs
           %h5 Prerequisites
           %ul
@@ -96,7 +99,7 @@
                 $ sudo gem install rhc
 
       %section#win.install
-        %h3 Windows
+        %h4 Windows
         .hero-unit.prereqs
           %h5 Prerequisites
           %ul
@@ -124,7 +127,7 @@
       = link_to 'Installing OpenShift client tools video walkthrough', local_video_url('express_client_tools'), :class => 'action-more'
 
 %section#create_domain_name
-  %h2 2. Create a domain name
+  %h3 2. Create a domain name
   %p
     Using your OpenShift login and password, call rhc domain create to create a unique domain name for your applications.
 
@@ -141,7 +144,7 @@
       The <code>rhc domain create</code> command will create a configuration file - &lt;your home directory&gt;/.openshift/express.conf - which sets up a default login.
 
 %section#create_application.topic
-  %h2 3. Create your first application
+  %h3 3. Create your first application
   %p
     Now you can create an application.
     %pre
@@ -160,7 +163,7 @@
     = link_to 'Creating an application video walkthrough', local_video_url('express_create_app'), :class => 'action-more', :target => '_blank'
 
 %section#publish.topic
-  %h2 4. Make a change, publish
+  %h3 4. Make a change, publish
 
   %p
     As we all know, getting an application running is only the first step. Now you are on the road to making it your own.  Here's an example for
@@ -192,7 +195,7 @@
         %li= link_to 'MediaWiki', 'https://www.redhat.com/openshift/sites/default/files/documents/RHOS_Express_Getting_Started_w_MediaWiki.pdf'
 
 %section#next_steps.topic
-  %h2 5. Next steps
+  %h3 5. Next steps
 
   %p
     While this has gotten you started, there is a lot more information out there to really get you going.  Check out the following pages for videos, blogs, and tutorials:
@@ -202,7 +205,7 @@
       %li= link_to 'Technical Documentation', user_guide_url
       %li= link_to 'Support Forums', forums_url
 
-- if logged_in?
+- if previously_logged_in?
   %section= take_action console_path, 'Ready to scale in the cloud?', 'Open the OpenShift Console'
 - else
   %section= take_action new_account_path, 'Ready to scale in the cloud?', 'Sign up now'
