--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -3,13 +3,13 @@
   .messaging
     .container
       .primary.headline
-        Shift your 
-        %strong App
+        Take your 
+        %strong Apps
         to the Cloud
       .secondary
-        Start your journey into the cloud with the answers you need.
+        OpenShift is a next generation application hosting environment. Read on to see how it can help you achieve your application goals.
 
-  - if logged_in?
+  - if previously_logged_in?
     = take_action console_path, 'Open the <strong>OpenShift</strong> Console'
   - else
     = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
@@ -18,15 +18,12 @@
 
 %section
 
-  %h2
-    OpenShift will give you a fast on-ramp to the Cloud. 
-    Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>Node.js</strong>, <strong>Python</strong>, <strong>PHP</strong> and 
-    <strong>Perl</strong> apps in the cloud with the command-line and <strong>Git</strong> in just a few minutes. 
-    
   :markdown
-    OpenShift is Red Hat's Cloud Computing Platform as a Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
+    OpenShift is Red Hat's Cloud Computing Platform as a Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  
 
-    <!--![OpenShift PaaS Illustration](/app/images/overview-paas.png)-->
+    ![OpenShift PaaS Illustration](images/overview-paas.png)
+    
+    OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
 
   %a{:name => 'code'}
   :markdown
@@ -59,37 +56,42 @@
 
     That's all there is to it.  Simple, right?
 
-  %section= link_to 'Read more about getting started', getting_started_path, :class => 'action-more'
+  %p= link_to 'Read more about getting started', getting_started_path, :class => 'action-more'
   
+%section.row
+  .span6
+    %a{:name => 'open'}
+    :markdown
+      ## Code anything.
 
-  .row
-    .span6
-      %a{:name => 'open'}
-      :markdown
-        ## Code anything.
+      OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.js, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
 
-        OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.js, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
-        
-        In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
-        <!--![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)-->
+      In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
+      <!--![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)-->
 
-    .span6
-      %a{:name => 'scale'}
-      :markdown
-        ## Blow the doors off your expectations
+  .span6
+    %a{:name => 'scale'}
+    :markdown
+      ## Blow the doors off your expectations
 
-        Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
-        
-        With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
+      Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  
+      
+      OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
 
-        <!--![OpenShift Scaling](/app/images/overview-scaling.png)-->
+      With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
 
+      <!--![OpenShift Scaling](images/overview-scaling.png)-->
+
+  .center
+    = image_tag 'overview-scaling.png', :alt => 'OpenShift Scaling'
+
+%section
   :markdown
     ## Under the Hood.
 
     OpenShift by Red Hat is built on all open-source technologies (we are the leading open source company after all).  A decade of enhancements in these technologies contributed by the open source community has resulted in a set of rock-solid, bullet-proof, super-secure, and high-performing technology components that make OpenShift the best PaaS in the business.
 
-    <!--![OpenShift architecture diagram](/app/images/overview-architecture.png)-->
+    <!--![OpenShift architecture diagram](images/overview-architecture.png)-->
 
     OpenShift is built on a foundation of Red Hat Enterprise Linux (RHEL).  Beyond being the leading and most respected Linux distro, RHEL provides some key capabilities that allow OpenShift to be stable, responsive, performant and secure. OpenShift leverages the multitenancy and security models within RHEL to provide fine-grained and trusted control over the compute and storage resources available to any single OpenShift application.  SELinux allows OpenShift to "firewall" one user's application from another in order to insure security and survivability.  Taking a "multi-tenant in the OS" approach vs. a "multi-tenant hypervisor" approach allows OpenShift to scale resources much more quickly so that your application will never lack the horsepower that it needs.
 
@@ -103,4 +105,4 @@
 
     <!--![OpenShift ease of use](/app/images/overview-ease-of-use.png)-->
 
-%section= take_action getting_started_path, 'Ready to scale in the cloud?', 'Read the Getting Started Guide'
+%section= take_action getting_started_path, 'Want to know more?', 'Read the Getting Started Guide'
