when embedding cart put server output in an escaped pre tag
this makes it look more up front to the user before we can get
structured data from the server that we can integrate

--- a/site/app/views/cartridges/next_steps.html.haml
+++ b/site/app/views/cartridges/next_steps.html.haml
@@ -5,7 +5,10 @@
   %h1 Next Steps
 
 - if @cartridge_message
-  %p #{@cartridge_message}
+  %pre.cli
+    = preserve do
+      :escaped
+        #{@cartridge_message}
 
 .row
   .span7
