--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -31,4 +31,9 @@
         %li= link_to "Community", community_url
         %li= link_to "My Account", account_path
         %li= link_to "Sign Out", logout_path
+        
+      #identity.pull-right
+        Logged in as: 
+        %span.username
+          = session[:login]
 
