correct links and remove duplicates in opensource dislaimer page

--- a/site/app/views/legal/opensource_disclaimer.html.haml
+++ b/site/app/views/legal/opensource_disclaimer.html.haml
@@ -227,9 +227,6 @@
       = link_to "rubygem-highline", "http://highline.rubyforge.org"
       (GPLv2+ or Ruby)
     %li
-      = link_to "rubygem-json_pure", "http://mocha.rubyforge.org"
-      (GPLv2 or Ruby)
-    %li
       = link_to "rubygem-mocha", "http://mocha.rubyforge.org"
       (MIT and Ruby)
     %li
@@ -269,7 +266,7 @@
       = link_to "rubygem-sqlite3", "http://sqlite-ruby.rubyforge.org/"
       (BSD)
     %li
-      = link_to "rubygem-thread-dump", "#needs_to_be_filled_in"
+      = link_to "rubygem-thread-dump", "http://rubyforge.org/projects/thread-dump/"
     %li
       = link_to "rubygems", "http://ruby-lang.org/"
       (Ruby or MIT)
