--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -36,6 +36,10 @@
   color: white;
 }
 
+.alert {
+  word-wrap: break-word; 
+}
+
 /*	Console overview
 	----------------------------------------------------- */	
 		
