--- a/site/app/views/password/edit.html.haml
+++ b/site/app/views/password/edit.html.haml
@@ -6,7 +6,9 @@
   %p When choosing a password we recommend using numbers, symbols, and upper and lower case letters for extra security.
   = f.inputs do
     - if @token.nil?
-      = f.input :old_password, :required => true, :hint => link_to("Forget your password?  Reset it now", new_password_path)
+      = f.input :old_password, :required => true
+      %p.forgot
+        = link_to("Forget your password?  Reset it now", new_password_path)
     - else
       = hidden_field_tag 'token', @token
 
