--- a/site/app/views/applications/show.html.haml
+++ b/site/app/views/applications/show.html.haml
@@ -71,7 +71,7 @@
       %h5 Client Tools Help
       %ul.unstyled
         %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/sites/default/files/documents/OpenShift_Express-User_Guide-en-US.pdf'} OpenShift Express User Guide
+          %a{:href => 'https://www.redhat.com/openshift/community/sites/default/files/documents/OpenShift_Express-User_Guide-en-US.pdf'} OpenShift User Guide
         %li 
           %a{:href => sync_git_with_remote_repo_knowledge_base_url} Sync your OpenShift repo with an existing Git repo
         - if @application_type.help_topics and not @application_type.help_topics.empty?
