--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -16,16 +16,16 @@
 
 %h1.ribbon What is OpenShift?
 
-%section
-
+%section#intro
+  
+  = image_tag 'overview-paas.png', :alt => 'OpenShift PaaS Illustration', :id => 'paas-illustration'
   :markdown
     OpenShift is Red Hat's Cloud Computing Platform as a Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  
 
-    ![OpenShift PaaS Illustration](images/overview-paas.png)
-    
     OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
 
-  %a{:name => 'code'}
+%a{:name => 'code'}
+%section#code
   :markdown
     ## How do I use OpenShift?
 
@@ -58,34 +58,32 @@
 
   %p= link_to 'Read more about getting started', getting_started_path, :class => 'action-more'
   
-%section.row
-  .span6
-    %a{:name => 'open'}
-    :markdown
-      ## Code anything.
+%section#open
+  %a{:name => 'open'}
+  :markdown
+    ## Code anything.
 
-      OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.js, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
+    OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.js, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
 
-      In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
-      <!--![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)-->
+    In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
+    <!--![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)-->
 
-  .span6
-    %a{:name => 'scale'}
-    :markdown
-      ## Blow the doors off your expectations
+%section#scale
+  %a{:name => 'scale'}
+  = image_tag 'overview-scaling.png', :alt => 'OpenShift Scaling'
+  :markdown
+    ## Blow the doors off your expectations
 
-      Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  
-      
-      OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
+    Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  
+    
+    OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
 
-      With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
+    With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
 
-      <!--![OpenShift Scaling](images/overview-scaling.png)-->
+    <!--![OpenShift Scaling](images/overview-scaling.png)-->
 
-  .center
-    = image_tag 'overview-scaling.png', :alt => 'OpenShift Scaling'
 
-%section
+%section#arch
   :markdown
     ## Under the Hood.
 
