--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -44,7 +44,7 @@
 
   %section#account-digest.span4
     #assistance
-      %h5 OpenShift Express Help
+      %h5 OpenShift Help
       %ul.unstyled
         - console_help_links.each do |l|
           %li= link_to l[:name], l[:href]
