Logo was missing from the simple header layouts

--- a/site/app/views/layouts/simple/_header.html.haml
+++ b/site/app/views/layouts/simple/_header.html.haml
@@ -9,6 +9,8 @@
         = link_to root_path do
           .brand-image
           .brand-text
+            %strong> Open
+            Shift
 
   - if content_for? :header
     = yield :header
